--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "NodeJS Restful API",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start":"nodemon server"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,14 @@
   "bugs": {
     "url": "https://github.com/BarkerBrian-FS/NodeJS-Restful-API/issues"
   },
-  "homepage": "https://github.com/BarkerBrian-FS/NodeJS-Restful-API#readme"
+  "homepage": "https://github.com/BarkerBrian-FS/NodeJS-Restful-API#readme",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.19"
+  }
 }
